[gd_scene load_steps=2 format=3 uid="uid://dag68y0dxqtmg"]

[ext_resource type="Script" path="res://options.gd" id="1_uls3l"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uls3l")
busName = "Music"

[node name="Attack" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.003
anchor_bottom = 0.012
offset_left = 32.0
offset_top = 32.0
offset_right = 148.544
offset_bottom = 56.224
text = "Attack_button
"

[node name="Attack_Current" type="Label" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 32.0
offset_right = 216.0
offset_bottom = 64.0
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 72.0
offset_right = 216.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
text = "Press any key"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 160.0
offset_right = 216.0
offset_bottom = 208.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 120.0
offset_right = 216.0
offset_bottom = 152.0
text = "Window mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResolutionsOptions" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 256.0
offset_right = 216.0
offset_bottom = 304.0
allow_reselect = true

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 216.0
offset_right = 216.0
offset_bottom = 248.0
text = "Screen resolution
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 336.0
offset_right = 216.0
offset_bottom = 352.0

[node name="Label" type="Label" parent="HSlider"]
layout_mode = 0
offset_left = 200.0
offset_top = -8.0
offset_right = 240.0
offset_bottom = 24.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 384.0
offset_right = 272.0
offset_bottom = 440.0
text = "Save settings
"
